--- a/assets/css/final-tailwind.css
+++ b/assets/css/final-tailwind.css
@@ -1965,6 +1965,30 @@ video {
   top: 100%;
 }
 
+.top-3 {
+  top: 12px;
+}
+
+.top-2 {
+  top: 8px;
+}
+
+.top-\[8px\] {
+  top: 8px;
+}
+
+.top-\[10px\] {
+  top: 10px;
+}
+
+.top-7 {
+  top: 28px;
+}
+
+.top-9 {
+  top: 36px;
+}
+
 .isolate {
   isolation: isolate;
 }
@@ -2254,6 +2278,10 @@ video {
   max-width: 28rem;
 }
 
+.max-w-prose {
+  max-width: 65ch;
+}
+
 .flex-1 {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 0%;
@@ -2378,6 +2406,10 @@ video {
   resize: both;
 }
 
+.list-none {
+  list-style-type: none;
+}
+
 .columns-3 {
   -webkit-columns: 3;
      -moz-columns: 3;
@@ -2491,6 +2523,12 @@ video {
       justify-content: space-around;
 }
 
+.justify-evenly {
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
 .gap-1 {
   gap: 4px;
 }
@@ -2529,6 +2567,10 @@ video {
 
 .gap-8 {
   gap: 32px;
+}
+
+.gap-y-3 {
+  row-gap: 12px;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2648,6 +2690,10 @@ video {
   border-width: 1px;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border-\[\#1E3A8A\] {
   --tw-border-opacity: 1;
   border-color: rgb(30 58 138 / var(--tw-border-opacity, 1));
@@ -2703,6 +2749,11 @@ video {
   border-color: rgb(244 244 246 / var(--tw-border-opacity, 1));
 }
 
+.border-l-primary-50 {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(106 111 129 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[\#1E3A8A\] {
   --tw-bg-opacity: 1;
   background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
@@ -2745,6 +2796,16 @@ video {
 .bg-primary-90 {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-primary-80 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 218 223 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#f5f7f9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 247 249 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-90 {
@@ -3058,6 +3119,10 @@ video {
 
 .font-extrabold {
   font-weight: 800;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .lowercase {
@@ -3535,6 +3600,10 @@ video {
   outline-offset: 2px;
 }
 
+.focus-visible\:outline-0:focus-visible {
+  outline-width: 0px;
+}
+
 .group:hover .group-hover\:pointer-events-auto {
   pointer-events: auto;
 }
@@ -3599,6 +3668,15 @@ video {
 }
 
 .prose-h2\:text-\[\#3C3F49\] :is(:where(h2):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+  --tw-text-opacity: 1;
+  color: rgb(60 63 73 / var(--tw-text-opacity, 1));
+}
+
+.prose-h3\:text-h4 :is(:where(h3):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+  font-size: 28px;
+}
+
+.prose-h3\:text-\[\#3C3F49\] :is(:where(h3):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
   --tw-text-opacity: 1;
   color: rgb(60 63 73 / var(--tw-text-opacity, 1));
 }
@@ -4010,6 +4088,10 @@ video {
 
   .prose-h2\:md\:text-h2 :is(:where(h2):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
     font-size: 36px;
+  }
+
+  .prose-h3\:md\:text-h3 :is(:where(h3):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+    font-size: 32px;
   }
 
   @media (max-width: 1407px) {
