--- a/assets/css/final-tailwind.css
+++ b/assets/css/final-tailwind.css
@@ -1961,32 +1961,12 @@ video {
   top: 56px;
 }
 
-.top-full {
-  top: 100%;
-}
-
 .top-3 {
   top: 12px;
 }
 
-.top-2 {
-  top: 8px;
-}
-
-.top-\[8px\] {
-  top: 8px;
-}
-
-.top-\[10px\] {
-  top: 10px;
-}
-
-.top-7 {
-  top: 28px;
-}
-
-.top-9 {
-  top: 36px;
+.top-full {
+  top: 100%;
 }
 
 .isolate {
@@ -2278,10 +2258,6 @@ video {
   max-width: 28rem;
 }
 
-.max-w-prose {
-  max-width: 65ch;
-}
-
 .flex-1 {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 0%;
@@ -2569,10 +2545,6 @@ video {
   gap: 32px;
 }
 
-.gap-y-3 {
-  row-gap: 12px;
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(8px * calc(1 - var(--tw-space-y-reverse)));
@@ -2798,16 +2770,6 @@ video {
   background-color: rgb(244 244 246 / var(--tw-bg-opacity, 1));
 }
 
-.bg-primary-80 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(216 218 223 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#f5f7f9\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 247 249 / var(--tw-bg-opacity, 1));
-}
-
 .bg-opacity-90 {
   --tw-bg-opacity: 0.9;
 }
@@ -2997,11 +2959,6 @@ video {
 .py-\[48px\] {
   padding-top: 48px;
   padding-bottom: 48px;
-}
-
-.py-\[52px\] {
-  padding-top: 52px;
-  padding-bottom: 52px;
 }
 
 .pb-12 {
@@ -3496,6 +3453,11 @@ video {
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:border-\[\#1E3A8A\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(30 58 138 / var(--tw-border-opacity, 1));
+}
+
 .hover\:border-primary-0:hover {
   --tw-border-opacity: 1;
   border-color: rgb(14 15 16 / var(--tw-border-opacity, 1));
@@ -3663,17 +3625,9 @@ video {
           animation-duration: 3s;
 }
 
-.prose-h2\:text-h5 :is(:where(h2):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
-  font-size: 24px;
-}
-
 .prose-h2\:text-\[\#3C3F49\] :is(:where(h2):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
   --tw-text-opacity: 1;
   color: rgb(60 63 73 / var(--tw-text-opacity, 1));
-}
-
-.prose-h3\:text-h4 :is(:where(h3):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
-  font-size: 28px;
 }
 
 .prose-h3\:text-\[\#3C3F49\] :is(:where(h3):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
@@ -3771,10 +3725,6 @@ video {
 
   .max-lg\:hidden {
     display: none;
-  }
-
-  .max-lg\:h-\[400px\] {
-    height: 400px;
   }
 
   .max-lg\:w-full {
@@ -3947,11 +3897,6 @@ video {
     padding: 12px;
   }
 
-  .max-md\:px-2 {
-    padding-left: 8px;
-    padding-right: 8px;
-  }
-
   .max-md\:text-center {
     text-align: center;
   }
@@ -4084,14 +4029,6 @@ video {
 
   .md\:text-h6 {
     font-size: 20px;
-  }
-
-  .prose-h2\:md\:text-h2 :is(:where(h2):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
-    font-size: 36px;
-  }
-
-  .prose-h3\:md\:text-h3 :is(:where(h3):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
-    font-size: 32px;
   }
 
   @media (max-width: 1407px) {
