--- a/assets/css/final-tailwind.css
+++ b/assets/css/final-tailwind.css
@@ -2028,11 +2028,6 @@ video {
   margin-right: 12px;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .my-0 {
   margin-top: 0;
   margin-bottom: 0;
@@ -2145,6 +2140,11 @@ video {
   height: 32px;
 }
 
+.size-\[55px\] {
+  width: 55px;
+  height: 55px;
+}
+
 .h-10 {
   height: 40px;
 }
@@ -2235,10 +2235,6 @@ video {
 
 .w-\[82px\] {
   width: 82px;
-}
-
-.w-\[calc\(100\%_-_1rem\)\] {
-  width: calc(100% - 1rem);
 }
 
 .w-full {
@@ -2641,6 +2637,10 @@ video {
   overflow-y: auto;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -2756,6 +2756,11 @@ video {
   background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#EA580C\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#F3F4F6\] {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
@@ -2769,11 +2774,6 @@ video {
 .bg-accent-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-accent-40 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 74 175 / var(--tw-bg-opacity, 1));
 }
 
 .bg-accent-90 {
@@ -2803,6 +2803,11 @@ video {
 .bg-primary-90 {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-90 {
@@ -2916,11 +2921,6 @@ video {
   padding-right: 40px;
 }
 
-.px-14 {
-  padding-left: 72px;
-  padding-right: 72px;
-}
-
 .px-2 {
   padding-left: 8px;
   padding-right: 8px;
@@ -3001,18 +3001,32 @@ video {
   padding-bottom: 48px;
 }
 
-.py-16 {
-  padding-top: 100px;
-  padding-bottom: 100px;
+.px-\[26px\] {
+  padding-left: 26px;
+  padding-right: 26px;
 }
 
-.py-17 {
-  padding-top: 120px;
-  padding-bottom: 120px;
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.px-\[24px\] {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.px-\[22px\] {
+  padding-left: 22px;
+  padding-right: 22px;
 }
 
 .pb-12 {
   padding-bottom: 56px;
+}
+
+.pb-17 {
+  padding-bottom: 120px;
 }
 
 .pb-4 {
@@ -3064,16 +3078,12 @@ video {
   padding-top: 16px;
 }
 
-.pt-\[48px\] {
-  padding-top: 48px;
-}
-
-.pb-17 {
-  padding-bottom: 120px;
-}
-
 .pt-9 {
   padding-top: 36px;
+}
+
+.pt-\[48px\] {
+  padding-top: 48px;
 }
 
 .text-center {
@@ -3148,20 +3158,16 @@ video {
   font-style: italic;
 }
 
-.leading-7 {
-  line-height: 1.75rem;
-}
-
 .leading-8 {
   line-height: 2rem;
 }
 
-.leading-\[34px\] {
-  line-height: 34px;
-}
-
 .leading-9 {
   line-height: 2.25rem;
+}
+
+.leading-\[34px\] {
+  line-height: 34px;
 }
 
 .text-\[\#1E293B\] {
@@ -3273,16 +3279,16 @@ video {
           box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
           box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
           box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
@@ -3354,6 +3360,22 @@ video {
           transition-duration: 150ms;
 }
 
+.transition-transform {
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 150ms;
+          transition-duration: 150ms;
+}
+
+.delay-200 {
+  -webkit-transition-delay: 200ms;
+          transition-delay: 200ms;
+}
+
 .duration-300 {
   -webkit-transition-duration: 300ms;
           transition-duration: 300ms;
@@ -3367,6 +3389,11 @@ video {
 .duration-700 {
   -webkit-transition-duration: 700ms;
           transition-duration: 700ms;
+}
+
+.duration-200 {
+  -webkit-transition-duration: 200ms;
+          transition-duration: 200ms;
 }
 
 .\[clip-path\:polygon\(0_0\2c _100\%_0_\2c _100\%_100\%_\2c _0_100\%\)\] {
@@ -3478,44 +3505,9 @@ video {
   z-index: -1;
 }
 
-@-webkit-keyframes ping {
-  75%, 100% {
-    content: var(--tw-content);
-    -webkit-transform: scale(2);
-            transform: scale(2);
-    opacity: 0;
-  }
-}
-
-@keyframes ping {
-  75%, 100% {
-    content: var(--tw-content);
-    -webkit-transform: scale(2);
-            transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.after\:animate-ping::after {
-  content: var(--tw-content);
-  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
-.after\:rounded-full::after {
-  content: var(--tw-content);
-  border-radius: 9999px;
-}
-
 .after\:bg-accent-0\/35::after {
   content: var(--tw-content);
   background-color: rgb(1 2 4 / 0.35);
-}
-
-.after\:bg-accent-40::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 74 175 / var(--tw-bg-opacity, 1));
 }
 
 .after\:bg-gradient-to-t::after {
@@ -3553,6 +3545,13 @@ video {
 
 .hover\:rotate-2:hover {
   --tw-rotate: 2deg;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
